crates/aipm/src/snapshots/aipm__wizard__tests__package_prompts_name_flag_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: format_steps(&steps)
---
Step 1:
  Label: Description:
  Kind: Text (placeholder: "An AI plugin package")

Step 2:
  Label: Plugin type:
  Kind: Select (default: 0)
   *[0] composite — skills + agents + hooks (recommended)
    [1] skill    — single skill
    [2] agent    — autonomous agent
    [3] mcp      — Model Context Protocol server
    [4] hook     — lifecycle hook
    [5] lsp      — Language Server Protocol
  Help: Use arrow keys, Enter to select
