crates/aipm/src/snapshots/aipm__wizard__tests__resolve_package_custom_name_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{result:?}\")"
---
(Some("my-plugin"), Some(Skill))
