crates/aipm/src/snapshots/aipm__wizard__tests__resolve_package_defaults_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{result:?}\")"
---
(None, Some(Composite))
