crates/aipm/src/snapshots/aipm__wizard__tests__resolve_package_with_both_flags_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{result:?}\")"
---
(Some("preset"), Some(Hook))
