crates/aipm/src/snapshots/aipm__wizard__tests__resolve_package_with_name_flag_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{result:?}\")"
---
(Some("preset-name"), Some(Agent))
