crates/aipm/src/snapshots/aipm__wizard__tests__resolve_workspace_all_flags_no_prompts_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
WizardAnswers { workspace: true, marketplace: true, no_starter: true, marketplace_name: "my-mkt", engines_scaffold: EngineSet(CLAUDE | COPILOT), engines_support: None }
